source/externs/X11/Xproto.d

module externs.X11.Xproto;
@nogc nothrow:
extern(C): __gshared:

private template HasVersion(string versionId) {
	mixin("version("~versionId~") {enum HasVersion = true;} else {enum HasVersion = false;}");
}
/* Definitions for the X window system used by server and c bindings */

/*
 * This packet-construction scheme makes the following assumptions:
 *
 * 1. The compiler is able
 * to generate code which addresses one- and two-byte quantities.
 * In the worst case, this would be done with bit-fields.  If bit-fields
 * are used it may be necessary to reorder the request fields in this file,
 * depending on the order in which the machine assigns bit fields to
 * machine words.  There may also be a problem with sign extension,
 * as K+R specify that bitfields are always unsigned.
 *
 * 2. 2- and 4-byte fields in packet structures must be ordered by hand
 * such that they are naturally-aligned, so that no compiler will ever
 * insert padding bytes.
 *
 * 3. All packets are hand-padded to a multiple of 4 bytes, for
 * the same reason.
 */

 
/***********************************************************

Copyright 1987, 1998  The Open Group

Permission to use, copy, modify, distribute, and sell this software and its
documentation for any purpose is hereby granted without fee, provided that
the above copyright notice appear in all copies and that both that
copyright notice and this permission notice appear in supporting
documentation.

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL THE
OPEN GROUP BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN
AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

Except as contained in this notice, the name of The Open Group shall not be
used in advertising or otherwise to promote the sale, use or other dealings
in this Software without prior written authorization from The Open Group.


Copyright 1987 by Digital Equipment Corporation, Maynard, Massachusetts.

                        All Rights Reserved

Permission to use, copy, modify, and distribute this software and its
documentation for any purpose and without fee is hereby granted,
provided that the above copyright notice appear in all copies and that
both that copyright notice and this permission notice appear in
supporting documentation, and that the name of Digital not be
used in advertising or publicity pertaining to distribution of the
software without specific, written prior permission.

DIGITAL DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE, INCLUDING
ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS, IN NO EVENT SHALL
DIGITAL BE LIABLE FOR ANY SPECIAL, INDIRECT OR CONSEQUENTIAL DAMAGES OR
ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS,
WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION,
ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS
SOFTWARE.

******************************************************************/

import externs.X11.Xmd;
import externs.X11.Xprotostr;

/*
 * Define constants for the sizes of the network packets.  The sz_ prefix is
 * used instead of something more descriptive so that the symbols are no more
 * than 32 characters in length (which causes problems for some compilers).
 */
enum sz_xSegment = 8;
enum sz_xPoint = 4;
enum sz_xRectangle = 8;
enum sz_xArc = 12;
enum sz_xConnClientPrefix = 12;
enum sz_xConnSetupPrefix = 8;
enum sz_xConnSetup = 32;
enum sz_xPixmapFormat = 8;
enum sz_xDepth = 8;
enum sz_xVisualType = 24;
enum sz_xWindowRoot = 40;
enum sz_xTimecoord = 8;
enum sz_xHostEntry = 4;
enum sz_xCharInfo = 12;
enum sz_xFontProp = 8;
enum sz_xTextElt = 2;
enum sz_xColorItem = 12;
enum sz_xrgb = 8;
enum sz_xGenericReply = 32;
enum sz_xGetWindowAttributesReply = 44;
enum sz_xGetGeometryReply = 32;
enum sz_xQueryTreeReply = 32;
enum sz_xInternAtomReply = 32;
enum sz_xGetAtomNameReply = 32;
enum sz_xGetPropertyReply = 32;
enum sz_xListPropertiesReply = 32;
enum sz_xGetSelectionOwnerReply = 32;
enum sz_xGrabPointerReply = 32;
enum sz_xQueryPointerReply = 32;
enum sz_xGetMotionEventsReply = 32;
enum sz_xTranslateCoordsReply = 32;
enum sz_xGetInputFocusReply = 32;
enum sz_xQueryKeymapReply = 40;
enum sz_xQueryFontReply = 60;
enum sz_xQueryTextExtentsReply = 32;
enum sz_xListFontsReply = 32;
enum sz_xGetFontPathReply = 32;
enum sz_xGetImageReply = 32;
enum sz_xListInstalledColormapsReply = 32;
enum sz_xAllocColorReply = 32;
enum sz_xAllocNamedColorReply = 32;
enum sz_xAllocColorCellsReply = 32;
enum sz_xAllocColorPlanesReply = 32;
enum sz_xQueryColorsReply = 32;
enum sz_xLookupColorReply = 32;
enum sz_xQueryBestSizeReply = 32;
enum sz_xQueryExtensionReply = 32;
enum sz_xListExtensionsReply = 32;
enum sz_xSetMappingReply = 32;
enum sz_xGetKeyboardControlReply = 52;
enum sz_xGetPointerControlReply = 32;
enum sz_xGetScreenSaverReply = 32;
enum sz_xListHostsReply = 32;
enum sz_xSetModifierMappingReply = 32;
enum sz_xError = 32;
enum sz_xEvent = 32;
enum sz_xKeymapEvent = 32;
enum sz_xReq = 4;
enum sz_xResourceReq = 8;
enum sz_xCreateWindowReq = 32;
enum sz_xChangeWindowAttributesReq = 12;
enum sz_xChangeSaveSetReq = 8;
enum sz_xReparentWindowReq = 16;
enum sz_xConfigureWindowReq = 12;
enum sz_xCirculateWindowReq = 8;
enum sz_xInternAtomReq = 8;
enum sz_xChangePropertyReq = 24;
enum sz_xDeletePropertyReq = 12;
enum sz_xGetPropertyReq = 24;
enum sz_xSetSelectionOwnerReq = 16;
enum sz_xConvertSelectionReq = 24;
enum sz_xSendEventReq = 44;
enum sz_xGrabPointerReq = 24;
enum sz_xGrabButtonReq = 24;
enum sz_xUngrabButtonReq = 12;
enum sz_xChangeActivePointerGrabReq = 16;
enum sz_xGrabKeyboardReq = 16;
enum sz_xGrabKeyReq = 16;
enum sz_xUngrabKeyReq = 12;
enum sz_xAllowEventsReq = 8;
enum sz_xGetMotionEventsReq = 16;
enum sz_xTranslateCoordsReq = 16;
enum sz_xWarpPointerReq = 24;
enum sz_xSetInputFocusReq = 12;
enum sz_xOpenFontReq = 12;
enum sz_xQueryTextExtentsReq = 8;
enum sz_xListFontsReq = 8;
enum sz_xSetFontPathReq = 8;
enum sz_xCreatePixmapReq = 16;
enum sz_xCreateGCReq = 16;
enum sz_xChangeGCReq = 12;
enum sz_xCopyGCReq = 16;
enum sz_xSetDashesReq = 12;
enum sz_xSetClipRectanglesReq = 12;
enum sz_xCopyAreaReq = 28;
enum sz_xCopyPlaneReq = 32;
enum sz_xPolyPointReq = 12;
enum sz_xPolySegmentReq = 12;
enum sz_xFillPolyReq = 16;
enum sz_xPutImageReq = 24;
enum sz_xGetImageReq = 20;
enum sz_xPolyTextReq = 16;
enum sz_xImageTextReq = 16;
enum sz_xCreateColormapReq = 16;
enum sz_xCopyColormapAndFreeReq = 12;
enum sz_xAllocColorReq = 16;
enum sz_xAllocNamedColorReq = 12;
enum sz_xAllocColorCellsReq = 12;
enum sz_xAllocColorPlanesReq = 16;
enum sz_xFreeColorsReq = 12;
enum sz_xStoreColorsReq = 8;
enum sz_xStoreNamedColorReq = 16;
enum sz_xQueryColorsReq = 8;
enum sz_xLookupColorReq = 12;
enum sz_xCreateCursorReq = 32;
enum sz_xCreateGlyphCursorReq = 32;
enum sz_xRecolorCursorReq = 20;
enum sz_xQueryBestSizeReq = 12;
enum sz_xQueryExtensionReq = 8;
enum sz_xChangeKeyboardControlReq = 8;
enum sz_xBellReq = 4;
enum sz_xChangePointerControlReq = 12;
enum sz_xSetScreenSaverReq = 12;
enum sz_xChangeHostsReq = 8;
enum sz_xListHostsReq = 4;
enum sz_xChangeModeReq = 4;
enum sz_xRotatePropertiesReq = 12;
enum sz_xReply = 32;
enum sz_xGrabKeyboardReply = 32;
enum sz_xListFontsWithInfoReply = 60;
enum sz_xSetPointerMappingReply = 32;
enum sz_xGetKeyboardMappingReply = 32;
enum sz_xGetPointerMappingReply = 32;
enum sz_xGetModifierMappingReply = 32;
enum sz_xListFontsWithInfoReq = 8;
enum sz_xPolyLineReq = 12;
enum sz_xPolyArcReq = 12;
enum sz_xPolyRectangleReq = 12;
enum sz_xPolyFillRectangleReq = 12;
enum sz_xPolyFillArcReq = 12;
enum sz_xPolyText8Req = 16;
enum sz_xPolyText16Req = 16;
enum sz_xImageText8Req = 16;
enum sz_xImageText16Req = 16;
enum sz_xSetPointerMappingReq = 4;
enum sz_xForceScreenSaverReq = 4;
enum sz_xSetCloseDownModeReq = 4;
enum sz_xClearAreaReq = 16;
enum sz_xSetAccessControlReq = 4;
enum sz_xGetKeyboardMappingReq = 8;
enum sz_xSetModifierMappingReq = 4;
enum sz_xPropIconSize = 24;
enum sz_xChangeKeyboardMappingReq = 8;


/* For the purpose of the structure definitions in this file,
we must redefine the following types in terms of Xmd.h's types, which may
include bit fields.  All of these are #undef'd at the end of this file,
restoring the definitions in X.h.  */

alias Window = CARD32;
alias Drawable = CARD32;
alias Font = CARD32;
alias Pixmap = CARD32;
alias Cursor = CARD32;
alias Colormap = CARD32;
alias GContext = CARD32;
alias Atom = CARD32;
alias VisualID = CARD32;
alias Time = CARD32;
alias KeyCode = CARD8;
alias KeySym = CARD32;

enum X_TCP_PORT = 6000     /* add display number */;

enum xTrue =        1;
enum xFalse =       0;


alias KeyButMask = CARD16;

/*****************
   Connection setup structures.  See Chapter 8: Connection Setup
   of the X Window System Protocol specification for details.
*****************/

/* Client initiates handshake with this data, followed by the strings
 * for the auth protocol & data.
 */
struct xConnClientPrefix {
    CARD8 byteOrder;
    BYTE pad;
    CARD16 majorVersion, minorVersion;
    CARD16 nbytesAuthProto;	/* Authorization protocol */
    CARD16 nbytesAuthString;	/* Authorization string */
    CARD16 pad2;
}

/* Server response to xConnClientPrefix.
 *
 * If success == Success, this is followed by xConnSetup and
 * numRoots xWindowRoot structs.
 *
 * If success == Failure, this is followed by a reason string.
 *
 * The protocol also defines a case of success == Authenticate, but
 * that doesn't seem to have ever been implemented by the X Consortium.
 */
struct xConnSetupPrefix {
    CARD8 success;
    BYTE lengthReason; /*num bytes in string following if failure */
    CARD16 majorVersion, minorVersion;
    CARD16 length;       /* 1/4 additional bytes in setup info */
}


struct xConnSetup {
    CARD32 release;
    CARD32 ridBase, ridMask;
    CARD32 motionBufferSize;
    CARD16 nbytesVendor;      /* number of bytes in vendor string */
    CARD16 maxRequestSize;
    CARD8 numRoots;          /* number of roots structs to follow */
    CARD8 numFormats;        /* number of pixmap formats */
    CARD8 imageByteOrder;        /* LSBFirst, MSBFirst */
    CARD8 bitmapBitOrder;        /* LeastSignificant, MostSign...*/
    CARD8 bitmapScanlineUnit, bitmapScanlinePad;     /* 8, 16, 32 */
    KeyCode minKeyCode, maxKeyCode;
    CARD32 pad2;
}

struct xPixmapFormat {
    CARD8 depth;
    CARD8 bitsPerPixel;
    CARD8 scanLinePad;
    CARD8 pad1;
    CARD32 pad2;
}

/* window root */

struct xDepth {
    CARD8 depth;
    CARD8 pad1;
    CARD16 nVisuals;  /* number of xVisualType structures following */
    CARD32 pad2;
    }

struct xVisualType {
    VisualID visualID;
static if (HasVersion!"none" || HasVersion!"c_plusplus") {
    CARD8 c_class;
} else {
    CARD8 class_;
}
    CARD8 bitsPerRGB;
    CARD16 colormapEntries;
    CARD32 redMask, greenMask, blueMask;
    CARD32 pad;
    }

struct xWindowRoot {
    Window windowId;
    Colormap defaultColormap;
    CARD32 whitePixel, blackPixel;
    CARD32 currentInputMask;
    CARD16 pixWidth, pixHeight;
    CARD16 mmWidth, mmHeight;
    CARD16 minInstalledMaps, maxInstalledMaps;
    VisualID rootVisualID;
    CARD8 backingStore;
    BOOL saveUnders;
    CARD8 rootDepth;
    CARD8 nDepths;  /* number of xDepth structures following */
}


/*****************************************************************
 * Structure Defns
 *   Structures needed for replies
 *****************************************************************/

/* Used in GetMotionEvents */

struct xTimecoord {
    CARD32 time;
    INT16 x, y;
}

struct xHostEntry {
    CARD8 family;
    BYTE pad;
    CARD16 length;
}
